got a little plan gonna finish it tomrrow

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     restart: always
     command: ["npm", "run", "dev"]
     ports:
-      - "${PORT}:${PORT}"
+      - "3000:3000"
     volumes:
       - "./:/app:cached"
     environment:
-      PORT: ${PORT}
+      PORT: 3000
     depends_on:
       - mysql
   mysql:
